src/styles/login.css
@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');

.entrance {
  background-image: url('../images/estalo.gif');
  background-size: 100%;
  background-repeat: no-repeat;
  height: 150%;
  width: 100%;
  position: fixed;
  z-index: 3;
  animation-name: antre;
  animation-duration: 3s; 
  animation-fill-mode: forwards;
  margin-top: 10%;
}

.login-container {
    background: url('../images/backLogin.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    height: 120vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    font-family: 'Acme', sans-serif;
    font-size: 2vh;
    color: rgb(240, 236, 236);
}

.loginForm {
  background: linear-gradient(rgba(0,0,0,.60), rgba(0,0,0,.60));
  display: flex;
  flex-direction: column;
  padding-left: 3%;
  height: 70vh;
  width: 50vh;
  margin-top: 10%;
  padding-top: 3%;
  margin-bottom: 5vh;
  padding-bottom: 1%;
}

.logo-marvel-login{
  width: 80%;
  padding-left: 3%;
  padding-bottom: 5%;
}

.loginButtons {
  padding-top: 4%;
}

